[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Sprites/Solar_1_card.png" type="Texture" id=1]
[ext_resource path="res://Buildings/Solar_buildings/Buildings/Solar_1_building.gd" type="Script" id=2]

[node name="Solar_1_building" type="Node2D" groups=[
"Building",
]]
position = Vector2( 432, 320 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -26.6667 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -32 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -16, 32, -16, -21.3333, 16, -21.3333, 16, 32 )

[node name="Production_timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="Production_timer" to="." method="_on_Production_timer_timeout"]
